2011-07-16 Daniel Alder <dalder@snowflake.ch>

	* Added some small bug fixes
	* Added experimental cache
	* Cleanup changelog

2011-04-05 Daniel Alder <dalder@snowflake.ch>

	* initial release (basic features)