@@ -1002,75 +1002,6 @@ class tx_snowbabel_system_translations {
 			return $tempPath . $fileExtension . $hash . '.' . $Language . '.' . 'utf-8' . '.cache';
 	}
 
-		/**
-		 * @var int
-		 */
-		private static $performanceFirstTime = 0;
-
-		/**
-		 * @var int
-		 */
-		private static $performanceLastTime = 0;
-
-		/**
-		 * @var int
-		 */
-		private static $performanceLastMemory = 0;
-
-		/**
-		 * @return void
-		 */
-		private function startPerformance() {
-
-				// Time
-			self::$performanceLastTime = microtime(true);
-			self::$performanceFirstTime = self::$performanceLastTime;
-
-				// Memory
-			self::$performanceLastMemory = memory_get_usage();
-
-		}
-
-		/**
-		 * @static
-		 * @param string $Key
-		 * @return void
-		 */
-		private static function logPerformance($Key) {
-
-			// TIME
-
-			$unit = ' micros';
-			$current = microtime(true);
-
-			$Time = array(
-				'currentTime' => $current . $unit,
-				'lastTime' => self::$performanceLastTime . $unit,
-				'diffTime' => $current - self::$performanceLastTime . $unit,
-				'sinceStart' => $current - self::$performanceFirstTime . $unit
-			);
-
-			$unit = ' byte';
-			self::$performanceLastTime = $current;
-
-			// MEMORY
-
-			$current = memory_get_usage();
-
-			$Memory = array(
-				'currentMemory' => $current . $unit,
-				'lastMemory' => self::$performanceLastMemory . $unit,
-				'diffMemory' => $current - self::$performanceLastMemory . $unit
-			);
-
-			self::$performanceLastMemory = $current;
-
-
-			t3lib_div::debug(array(
-				'Time' => $Time,
-				'Memory' => $Memory
-			), $Key);
-		}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/snowbabel/Classes/System/class.tx_snowbabel_system_translations.php'])	{
